--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="video-section">
+    <section class="video-section pt-0">
         <div class="video-element d-none d-lg-block">
             <video autoplay="" muted="">
                 <source src="video/banner.mp4" type="video/mp4">
@@ -26,9 +26,20 @@
             <h3>TRANG PHỤC XỊN, ƯU ĐÃI KHỦNG</h3>
         </div>
         <div class="video-link">
-            <div id="days">
-                <div class="number">00</div>
-                <div class="label">Ngày</div>
+            <div class="d-flex countdown">
+                <div id="days">
+                    <div class="number">00</div>
+                    <div class="label">Ngày |</div>
+                </div>
+                <div id="hours">
+                    <div class="number">00</div>
+                </div>
+                <div id="minutes">
+                    <div class="number">00</div>
+                </div>
+                <div id="seconds">
+                    <div class="number">00</div>
+                </div>
             </div>
             <a href="https://www.facebook.com/VALORANTvn" target="_blank" class="link-button" rel="noopener noreferrer"><div class="button"><span>Tìm Hiểu Ngay</span></div></a>
         </div>
@@ -815,36 +826,48 @@
         <div class="container">
             <h1 class="color-red text-center">THỬ NGAY VẬN MAY</h1>
             <div class="row mt-4 mb-5">
-                <a href="https://valorant.zing.vn/vi-vn/download" class="col-4 col-4 col-lg-2">
+                <div class="col-4 col-4 col-lg-2">
                     <div class="images">
-                        <img src="img/card-1.png" alt="" class="img hover-card" >
+                        <a href="https://valorant.zing.vn/vi-vn/download" target="_blank" rel="noopener noreferrer">
+                            <img src="img/card-1.png" alt="" class="img hover-card" >
+                        </a>
                     </div>
-                </a>
-                <a href="https://valorant.zing.vn/vi-vn/download" class="col-4 col-4 col-lg-2">
+                </div>
+                <div class="col-4 col-4 col-lg-2">
                     <div class="images">
-                        <img src="img/card-2.png" alt="" class="img hover-card" >
+                        <a href="https://valorant.zing.vn/vi-vn/download" target="_blank" rel="noopener noreferrer">
+                            <img src="img/card-2.png" alt="" class="img hover-card" >
+                        </a>
                     </div>
-                </a>
-                <a href="https://valorant.zing.vn/vi-vn/download" class="col-4 col-4 col-lg-2">
+                </div>
+                <div class="col-4 col-4 col-lg-2">
                     <div class="images">
-                        <img src="img/card-3.png" alt="" class="img hover-card" >
+                        <a href="https://valorant.zing.vn/vi-vn/download" target="_blank" rel="noopener noreferrer">
+                            <img src="img/card-3.png" alt="" class="img hover-card" >
+                        </a>
                     </div>
-                </a>
-                <a href="https://valorant.zing.vn/vi-vn/download" class="col-4 col-4 col-lg-2">
+                </div>
+                <div class="col-4 col-4 col-lg-2">
                     <div class="images">
-                        <img src="img/card-1.png" alt="" class="img hover-card" >
+                        <a href="https://valorant.zing.vn/vi-vn/download" target="_blank" rel="noopener noreferrer">
+                            <img src="img/card-1.png" alt="" class="img hover-card" >
+                        </a>    
                     </div>
-                </a>
-                <a href="https://valorant.zing.vn/vi-vn/download" class="col-4 col-4 col-lg-2">
+                </div>
+                <div class="col-4 col-4 col-lg-2">
                     <div class="images">
-                        <img src="img/card-5.png" alt="" class="img hover-card" >
+                        <a href="https://valorant.zing.vn/vi-vn/download" target="_blank" rel="noopener noreferrer">
+                            <img src="img/card-5.png" alt="" class="img hover-card" >
+                        </a>    
                     </div>
-                </a>
-                <a href="https://valorant.zing.vn/vi-vn/download" class="col-4 col-4 col-lg-2">
+                </div>
+                <div class="col-4 col-4 col-lg-2">
                     <div class="images">
-                        <img src="img/card-3.png" alt="" class="img hover-card" >
+                        <a href="https://valorant.zing.vn/vi-vn/download" target="_blank" rel="noopener noreferrer">
+                            <img src="img/card-3.png" alt="" class="img hover-card" >
+                        </a>    
                     </div>
-                </a>
+                </div>
             </div>
             <div class="text-center">
                 <div class="group">
@@ -885,10 +908,11 @@
                     <li><a href="https://www.riotgames.com/en/privacy-notice" target="_blank" rel="noopener noreferrer">CHÍNH SÁCH BẢO MẬT</a></li>
                     <li><a href="https://www.riotgames.com/en/terms-of-service" target="_blank" rel="noopener noreferrer">ĐIỀU KHOẢN SỬ DỤNG (RIOT)</a></li>
                     <li><a href="https://valorant.zing.vn/dieu-khoan-su-dung.html" target="_blank" rel="noopener noreferrer">ĐIỀU KHOẢN SỬ DỤNG (VNG)</a></li>
+                    <li><a>TUỲ CHỌN COOKIES</a></li>
                 </ul>
             </div>
             <div class="text-center mt-4">
-                <img src="img/logo-18.png" alt="" width="120px" height="auto" />
+                <img src="img/logo-18.png" alt="" width="180px" height="auto" class="border-images" />
             </div>
         </div>
     </footer>
