--- a/index.html
+++ b/index.html
@@ -897,8 +897,8 @@
     <footer class="section">
         <div class="text-center">
             <div class="d-flex justify-content-center align-items-center">
-                <a href="" rel="noopener noreferrer"><img src="img/logo-riot.png" width="100px" height="40px" alt="" class="mr-3" /></a>
-                <a href="" rel="noopener noreferrer"><img src="img/logo-vng.png" alt="" width="50px" height="60px" /></a>
+                <a href="" rel="noopener noreferrer"><img src="img/riot_logo.png" width="100px" alt="Riot" class="mr-3" /></a>
+                <a href="" rel="noopener noreferrer"><img src="img/logo-vng.png" alt="VNG" width="50px" /></a>
             </div>
             <p class="mt-3 mb-3">&copy; 2022 Riot Games, Inc.</p>
             <p>Công Ty Cổ Phần VNG. Địa chỉ: Lô 03b-04-05-06-07, khu Công Nghiệp,</p>
