--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" type="text/css" href="css/scrollbar.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             <h3>TRANG PHỤC XỊN, ƯU ĐÃI KHỦNG</h3>
         </div>
         <div class="video-link">
-            <div class="d-flex countdown">
+            <div class="d-flex countdown" style="min-width: 16rem">
                 <div id="days">
                     <div class="number">00</div>
                     <div class="label">Ngày |</div>
@@ -44,7 +45,14 @@
             <a href="https://www.facebook.com/VALORANTvn" target="_blank" class="link-button" rel="noopener noreferrer"><div class="button"><span>Tìm Hiểu Ngay</span></div></a>
         </div>
     </section>
-    <section class="section bg-black testimonals">
+    <section class="section testimonals">
+
+        <div class="background">
+            <img src="img/logo-tyle.png" alt="" />
+            <p class="frame-2-title">Top skin yêu thích từ cộng đồng</p>
+            <img src="img/logo-val.png" alt="" />
+        </div>
+
         <div class="container">
             <div class="owl-carousel owl-theme">
                 <div class="item">
@@ -697,7 +705,7 @@
                                 </div>    
                             </div>
                         </div>
-                        <div class="col-lg-7 col-12 order-1 order-sm-1 order-lg-2">
+                        <div class="col-lg-7 col-12 order-1 order-sm-1 order-lg-2" style="margin-top: 10px">
                             <img src="img/logo/logo-17.png" alt="" class="logo" />
                         </div>
                     </div>
