--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                     <div class="number">00</div>
                     <div class="label">Ngày |</div>
                 </div>
-                <div id="hours">
+                <div id="hours" style="font-size: 1.5625rem; font-weight: 700;">
                     <div class="number">00</div>
                 </div>
-                <div id="minutes">
+                <div id="minutes" style="font-size: 1.5625rem; font-weight: 700;">
                     <div class="number">00</div>
                 </div>
-                <div id="seconds">
+                <div id="seconds" style="font-size: 1.5625rem; font-weight: 700;">
                     <div class="number">00</div>
                 </div>
             </div>
