--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
                 <div class="item">
                     <div class="images">
-                        <img src="img/guns/gun-15.png" alt="" />
+                        <img src="img/guns/gun-15-1.png" alt="" />
                     </div>
                     <div class="row no-gutters m-0">
                         <div class="col-lg-5 col-12 order-2 order-sm-2 order-lg-1">
@@ -910,7 +910,7 @@
             </div>
             <p class="mt-3 mb-3">&copy; 2022 Riot Games, Inc.</p>
             <p>Công Ty Cổ Phần VNG. Địa chỉ: Lô 03b-04-05-06-07, khu Công Nghiệp,</p>
-            <p>Khu Chế Xuất Tân Thuận, phường Tân Thuạn Đông, Quận 7, Tp. Hồ Chí Minh </p>
+            <p>Khu Chế Xuất Tân Thuận, phường Tân Thuận Đông, Quận 7, Tp. Hồ Chí Minh </p>
             <div class="container">
                 <ul>
                     <li><a href="https://www.riotgames.com/en/privacy-notice" target="_blank" rel="noopener noreferrer">CHÍNH SÁCH BẢO MẬT</a></li>
