--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 </div>
                 <div class="item">
                     <div class="images">
-                        <img src="img/guns/gun-14.png" alt="" class="w-100" />
+                        <img src="img/guns/gun-15-1.png" alt="" class="w-100" />
                     </div>
                     <div class="row no-gutters m-0">
                         <div class="col-lg-5 col-12 order-2 order-sm-2 order-lg-1">
@@ -597,7 +597,7 @@
                 </div>
                 <div class="item">
                     <div class="images">
-                        <img src="img/guns/gun-15-1.png" alt="" />
+                        <img src="img/guns/gun-15.png" alt="" />
                     </div>
                     <div class="row no-gutters m-0">
                         <div class="col-lg-5 col-12 order-2 order-sm-2 order-lg-1">
